# rungpt

./: .darglint  .dockerignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  MODEL_ZOO.md  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: cd.yml  docker-release.yml  docs.yml  force-release.yml  manual_release.yml  release.yml
Dockerfiles/: Dockerfile  executor.Dockerfile  gateway.Dockerfile
docs/: CNAME  index.md
docs/assets/stylesheets/: extra.css  font.css  landing.css
docs/blog/: .authors.yml
docs/docs/: index.md
docs/docs/guides/: tensor-parallelism.md
docs/docs/usage/: python.md
docs/examples/: dolly.md  stable-diffusion.md  tensorboard.md
docs/overrides/: home.html  main.html
examples/: README.md  chat_example.py  codegen_example.py  context_example.py  flamingo_example.py  flan_example.py  http_request_example.py  llama_example.py  lora_example.py  moss_example.py  oasst_example.py  pythia_example.py  quick_start.py  rwkv_example.py  stablelm_example.py  step_generation_example.py  test.py  utils.py  vicuna_example.py
open_gpt/: __init__.py  __main__.py  config.py  factory.py  helper.py  logging.py  logs.py  profile.py
open_gpt/cli/: application.py
open_gpt/cli/commands/: about.py  deploy.py  flow.yml.jinja2  playground.py  quantize.py  serve.py
open_gpt/models/: chat.py  embedding.py  generation.py  helper.py  hf_model.py  loading.py  modeling.py  session.py
open_gpt/models/codegen/: loading.py  modeling.py
open_gpt/models/flamingo/: flamingo_lm.py  flamingo_model.py  loading.py  modeling.py
open_gpt/models/flan/: loading.py
open_gpt/models/llama/: loading.py  modeling.py
open_gpt/models/moss/: loading.py  modeling.py
open_gpt/models/pythia/: loading.py  modeling.py
open_gpt/models/rwkv/: modeling.py
open_gpt/models/stablelm/: loading.py  modeling.py
open_gpt/models/vicuna/: loading.py  modeling.py
open_gpt/resources/: flow.yml.jinja2
open_gpt/serve/: flow.py  gateway.py  helper.py  pydantic_models.py
open_gpt/serve/executors/: __init__.py  base.py  flamingo.py
open_gpt/serve/playground/: gradio.py
open_gpt/serve/resource/: flow.yml.jinja2
open_gpt/spqr/: datautils.py  main.py  quant_groups.py  quantize.py  quantizeargs.py  quantutils.py  spqr_engine.py  test.py  weight_permutation.py
open_gpts/: executor.py  factory.py
open_gpts/models/: hf_model.py
open_gpts/models/llama/: loading.py
open_gpts/models/pythia/: loading.py
opengpt/: __init__.py  adapter.py  factory.py  helper.py  hub.py  models.py  profile.py  serve.py
opengpt/models/flamingo/: flamingo_lm.py  loading.py  modeling.py
opengpt/models/flan/: loading.py
opengpt/models/llama/: loading.py
opengpt/models/open_assistant/: loading.py  reward_model.py
run_gpt/: __init__.py  __main__.py  factory.py  helper.py  profile.py
run_gpt/cli/: application.py  command_loader.py
run_gpt/cli/commands/: about.py  deploy.py  playground.py  quantize.py  serve.py
run_gpt/models/: chat.py  loading.py  modeling.py
run_gpt/models/flamingo/: config.json  configuration_flamingo.py  flamingo_model.py  loading.py  modeling.py
run_gpt/models/llama/: loading.py  modeling.py
run_gpt/models/moss/: modeling.py
run_gpt/models/pythia/: modeling.py
run_gpt/models/rwkv/: modeling.py
run_gpt/models/stablelm/: modeling.py
run_gpt/models/vicuna/: loading.py  modeling.py
run_gpt/resources/: flow.yml.jinja2
run_gpt/serve/: flow.py  gateway.py  pydantic_models.py
run_gpt/serve/executors/: __init__.py  base.py  flamingo.py  utils.py
run_gpt/serve/playground/: gradio.py  gradio_chatbot.py
run_gpt/spqr/: datautils.py  quant_groups.py  quantize.py  quantizeargs.py  quantutils.py  spqr_engine.py  weight_permutation.py
scripts/: benchmark.py  convert_llama_weights_to_hf.py  upload_to_s3.py
